# ffmpeg-binaries

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject-namespace.toml  pyproject.toml  requirements-build.txt  requirements-dev.txt  setup.py
.github/: dependabot.yml
.github/ffmpeg-binaries/: binaries.json  download_binaries.py  update_binaries.py
.github/ffmpeg-binaries/downloaders/: binaries_downloader.py  downloader.py  mac.py  nix.py  win.py
.github/scripts/: build.ps1  download_binaries.py  prepare_dist.py  update_binaries.py
.github/workflows/: ci.yml  update_data.yml
src/ffmpeg/: __init__.py  executable.py
src/ffmpeg/internals/__pyinstaller_hooks/: __init__.py  hook-ffmpeg.py  hook-ffmpeg_binaries.py
src/ffmpeg/internals/downloaders/: binaries.json  binaries_downloader.py  downloader.py  mac.py  nix.py  win.py
src/ffmpeg_binaries/internals/: __init__.py
tests/unit_tests/: test_executable.py  test_globals.py  test_internals.py
